Fixed NPC removal and restructured NPCManager